--- a/ZhuoKe/src/main/res/values/strings.xml
+++ b/ZhuoKe/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">zhuoke-sdk</string>
     <string name="zk_sdk">ZK_SDK!</string>
+    <string name="screen">屏幕</string>
 </resources>
