--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">ZhuoKe-SDK</string>
+
+    <string name="zk_label">ZKTeam</string>
+
+    <string name="zk_long_label">ZKTeam</string>
+
+    <string name="add_label">动态添加</string>
+
+    <string name="disabled">disabled</string>
 </resources>
